option('SDL_FORCE_STATIC_VCRT', type : 'boolean', value : false, description : 'Force /MT for static VC runtimes')
# option('SDL_${_OPT}', type : 'string', value : ${SDL_${_OPT}_ENABLED_BY_DEFAULT}, description : 'Enable the ${_SUB} subsystem')
option('SDL_WERROR', type : 'boolean', value : false, description : 'Enable -Werror')
option('SDL_SHARED', type : 'boolean', value : true, description : 'Build a shared version of the library')
option('SDL_STATIC', type : 'boolean', value : false, description : 'Build a static version of the library')
option('SDL_TEST', type : 'boolean', value : false, description : 'Build the SDL2_test library')
option('BUILD_SHARED_LIBS', type : 'boolean', value : true, description : 'Build the library as a shared library')
option('SDL2IMAGE_INSTALL', type : 'boolean', value : true, description : 'Enable SDL2_image install target')
option('SDL2IMAGE_DEPS_SHARED', type : 'boolean', value : true, description : 'Load dependencies dynamically')
option('SDL2IMAGE_VENDORED', type : 'boolean', value : false, description : 'Use vendored third-party libraries')
option('SDL2IMAGE_SAMPLES', type : 'boolean', value : true, description : 'Build the SDL2_image sample program(s)')
option('SDL2IMAGE_TESTS', type : 'boolean', value : false, description : 'Build unit tests?')
option('SDL2IMAGE_BACKEND_STB', type : 'boolean', value : true, description : 'Use stb_image for loading JPEG and PNG files')
option('SDL2IMAGE_AVIF', type : 'boolean', value : false, description : 'Support loading AVIF images')
option('SDL2IMAGE_BMP', type : 'boolean', value : true, description : 'Support loading BMP images')
option('SDL2IMAGE_GIF', type : 'boolean', value : true, description : 'Support loading GIF images')
option('SDL2IMAGE_JPG', type : 'boolean', value : true, description : 'Support loading JPEG images')
option('SDL2IMAGE_JXL', type : 'boolean', value : false, description : 'Support loading JXL images')
option('SDL2IMAGE_LBM', type : 'boolean', value : true, description : 'Support loading LBM images')
option('SDL2IMAGE_PCX', type : 'boolean', value : true, description : 'Support loading PCX images')
option('SDL2IMAGE_PNG', type : 'boolean', value : true, description : 'Support loading PNG images')
option('SDL2IMAGE_PNM', type : 'boolean', value : true, description : 'Support loading PNM images')
option('SDL2IMAGE_QOI', type : 'boolean', value : true, description : 'Support loading QOI images')
option('SDL2IMAGE_SVG', type : 'boolean', value : true, description : 'Support loading SVG images')
option('SDL2IMAGE_TGA', type : 'boolean', value : true, description : 'Support loading TGA images')
option('SDL2IMAGE_TIF', type : 'boolean', value : false, description : 'Support loading TIFF images')
option('SDL2IMAGE_WEBP', type : 'boolean', value : false, description : 'Support loading WEBP images')
option('SDL2IMAGE_XCF', type : 'boolean', value : true, description : 'Support loading XCF images')
option('SDL2IMAGE_XPM', type : 'boolean', value : true, description : 'Support loading XPM images')
option('SDL2IMAGE_XV', type : 'boolean', value : true, description : 'Support loading XV images')
option('CMAKE_POSITION_INDEPENDENT_CODE', type : 'boolean', value : true, description : 'Build static libraries with -fPIC')
option('SDL2TTF_SAMPLES', type : 'boolean', value : false, description : 'Build the SDL2_ttf sample program(s)')
option('SDL2TTF_INSTALL', type : 'boolean', value : true, description : 'Enable SDL2_ttf install target')
option('SDL2TTF_VENDORED', type : 'boolean', value : false, description : 'Use vendored third-party libraries')
option('SDL2TTF_HARFBUZZ', type : 'boolean', value : false, description : 'Use harfbuzz to improve text shaping')
option('SOL2_CI', type : 'boolean', value : false, description : 'Whether or not we are in continguous integration mode')
option('SOL2_SYSTEM_INCLUDE', type : 'boolean', value : true, description : 'Whether or not sol2 should be considered a system include. This helps suppress errors for when the sol2 author is a big derp and doesnt fix every single warning, ever.')
option('SOL2_TESTS', type : 'boolean', value : false, description : 'Enable build of tests')
option('SOL2_EXAMPLES', type : 'boolean', value : false, description : 'Enable build of examples')
option('SOL2_INTEROP_EXAMPLES', type : 'boolean', value : false, description : 'Enable build of interop examples')
option('SOL2_DYNAMIC_LOADING_EXAMPLES', type : 'boolean', value : false, description : 'Enable build of interop examples')
option('SOL2_SINGLE', type : 'boolean', value : false, description : 'Enable generation and build of single header files')
option('SOL2_DOCS', type : 'boolean', value : false, description : 'Enable build of documentation')
option('SOL2_ENABLE_INSTALL', type : 'boolean', value : true, description : 'Enable installation of Sol2')
option('lua_cpp', type: 'boolean', value: false, description: 'Compile lua as C++ code')